[gd_scene load_steps=4 format=3 uid="uid://v2sf8sr7yod4"]

[ext_resource type="Script" path="res://scripts/rockShotgun.gd" id="1_lamdw"]
[ext_resource type="Texture2D" uid="uid://4s3hpy0cl44n" path="res://sprites/shotgun.png" id="2_2m2ql"]
[ext_resource type="AudioStream" uid="uid://c2owk5q5auyvj" path="res://audio/shotgun1.wav" id="3_5hsqu"]

[node name="rockShotgun" type="Node2D"]
script = ExtResource("1_lamdw")

[node name="shotgunSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("2_2m2ql")

[node name="cooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="shotgunSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_5hsqu")

[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timeout"]
